Agregue el maquetado de la pagina de historia

--- a/pages/historia.html
+++ b/pages/historia.html
@@ -51,7 +51,18 @@
         </div>
       </nav>
     </header>
-    <main></main>
+    <main class="container my-5">
+      <h1 class="display-1 text-center">Sobre nuestra historia</h1>
+      <hr>
+      <section class="row">
+        <aside class="col-12 col-md-6">
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia vel voluptates ad totam! Distinctio sunt nisi repellat delectus laudantium corrupti, necessitatibus animi rem odit soluta tempora earum a fugit corporis saepe quia quam ex! Possimus hic corrupti amet cumque vel? Quasi libero officiis iste eius excepturi itaque distinctio facilis, magnam praesentium! Facilis porro nisi odit aliquid qui omnis esse magni eum, laborum non labore sint reprehenderit obcaecati explicabo minima ipsum ab nostrum dolor totam? Ut sed quasi et quis, velit exercitationem asperiores optio vel voluptates, nihil fugiat doloremque nesciunt error minima assumenda tempora inventore. Inventore mollitia labore odio voluptatum molestiae!</p>
+        </aside>
+        <aside class="col-12 col-md-6">
+          <img src="../img/historia.png" alt="panaderia cocu"  class="w-100">
+        </aside>
+      </section>
+    </main>
     <footer class="bg-dark py-4 text-light text-center">
       <p>&copy; Todos los derechos reservados</p>
     </footer>
