--- a/index.html
+++ b/index.html
@@ -33,18 +33,18 @@
           <div class="collapse navbar-collapse" id="nav">
             <ul class="navbar-nav ms-lg-auto me-auto me-lg-0 mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html"
+                <a class="nav-link active" aria-current="page" href="./index.html"
                   >Inicio</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="pages/contacto.html">Contactos</a>
+                <a class="nav-link" href="./pages/contacto.html">Contactos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="pages/historia.html">Historia</a>
+                <a class="nav-link" href="./pages/historia.html">Historia</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="pages/productos.html">Productos</a>
+                <a class="nav-link" href="./pages/productos.html">Productos</a>
               </li>
             </ul>
           </div>
