--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -37,13 +37,13 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="/pages/contacto.html">Contactos</a>
+                <a class="nav-link active" href="./contacto.html">Contactos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/pages/historia.html">Historia</a>
+                <a class="nav-link" href="./historia.html">Historia</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link " href="/pages/productos.html">Productos</a>
+                <a class="nav-link " href="./productos.html">Productos</a>
               </li>
             </ul>
           </div>
@@ -77,8 +77,30 @@
         </article>
       </section>
     </main>
-    <footer class="bg-dark py-4 text-light text-center">
-      <p>&copy; Todos los derechos reservados</p>
+    <footer class="bg-dark py-4 ">
+      <section class="container">
+        <article class="row text-secondary">
+          <aside class="col-12 col-md-4">
+            <img
+              src="../img/cocu_logo-450.png"
+              alt="logo panaderia cocu"
+              width="90px"
+            />
+          </aside>
+          <aside class="col-12 col-md-4">
+            <h5>Horarios de atencion</h5>
+            <p>Lunes a viernes <br>Sabado y domingo</p>
+          </aside>
+          <aside class="col-12 col-md-4">
+            <h5>Seguinos en nuestras redes</h5>
+            <div class="text-center">
+              <a href="#" class="text-secondary"><i class="bi bi-whatsapp fs-3"></i></a>
+              <a href="#" class="text-secondary"><i class="bi bi-facebook fs-3"></i></a>
+              <a href="#" class="text-secondary"> <i class="bi bi-instagram fs-3"></i></a>
+            </div>
+          </aside>
+        </article>
+      </section>
     </footer>
     <script src="js/bootstrap.min.js"></script>
   </body>
