--- a/pages/detalleProducto.html
+++ b/pages/detalleProducto.html
@@ -34,20 +34,18 @@
           <div class="collapse navbar-collapse" id="nav">
             <ul class="navbar-nav ms-lg-auto me-auto me-lg-0 mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" href="../index.html"
+                <a class="nav-link " aria-current="page" href="../index.html"
                   >Inicio</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/pages/contacto.html">Contactos</a>
+                <a class="nav-link" href="./contacto.html">Contactos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/pages/historia.html">Historia</a>
+                <a class="nav-link" href="./historia.html">Historia</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/pages/productos.html"
-                  >Productos</a
-                >
+                <a class="nav-link active" href="./productos.html">Productos</a>
               </li>
             </ul>
           </div>
@@ -55,17 +53,55 @@
       </nav>
     </header>
     <main class="container mt-3 mb-5">
-        <nav aria-label="breadcrumb">
-            <ol class="breadcrumb">
-              <li class="breadcrumb-item"><a href="/index.html">Inicio</a></li>
-              <li class="breadcrumb-item"><a href="/pages/productos.html">Productos</a></li>
-              <li class="breadcrumb-item"><a href="#">Tarta</a></li>
-              <li class="breadcrumb-item active" aria-current="page">Tarta de chocolate</li>
-            </ol>
-          </nav>
+      <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item"><a href="/index.html">Inicio</a></li>
+          <li class="breadcrumb-item">
+            <a href="/pages/productos.html">Productos</a>
+          </li>
+          <li class="breadcrumb-item"><a href="#">Tarta</a></li>
+          <li class="breadcrumb-item active" aria-current="page">
+            Tarta de chocolate
+          </li>
+        </ol>
+      </nav>
       <section>
-          <h1 class="display-1 text-center">Tarta de chocolate</h1>
-          <hr>
+        <h1 class="display-1 text-center">Tarta de chocolate</h1>
+        <hr />
+        <article class="row">
+          <aside class="col-12 col-md-6">
+            <img
+              src="../img/productos/Torta-de-chocolate_00098_portfolio.jpg"
+              alt="Tarta de chocolate"
+              class="w-100"
+            />
+          </aside>
+          <aside class="col-12 col-md-6">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima,
+              nostrum quod! Ex perspiciatis voluptas id debitis odio recusandae
+              iure dolorem vero quibusdam, similique aperiam sunt repudiandae
+              minus blanditiis. Dolore, non amet excepturi illum dignissimos
+              quaerat recusandae laudantium quo reiciendis quis delectus
+              tempora, enim, et nihil aliquid eius. Repudiandae non voluptatibus
+              maxime rerum perspiciatis incidunt impedit id nihil. Ea error odit
+              dolor fugit sapiente aliquid in, laboriosam ipsa tempora itaque
+              repellat delectus minima, iste repellendus velit hic maiores
+              nihil, enim aspernatur soluta excepturi labore praesentium
+              repudiandae? Suscipit soluta expedita, corporis doloribus iste
+              magni dolores libero deserunt deleniti beatae a et, culpa eius
+              voluptatibus impedit. Deserunt assumenda corporis recusandae
+              doloribus, doloremque eos beatae nesciunt, quasi, culpa animi
+              numquam nobis. Molestias beatae sapiente velit, sunt id voluptatum
+              eum debitis libero hic. Minus atque aliquid ab, accusantium optio
+              magni quaerat culpa dolore harum! Maxime, sunt. Sunt libero iure
+              repellendus illum voluptatem, architecto sed veniam.
+            </p>
+          </aside>
+        </article>
+        <div class="alert alert-info mt-3" role="alert">
+          <p>Semana de descuentos, lleva 3 tartas al valor de 2</p>
+        </div>
       </section>
     </main>
     <footer class="bg-dark py-4">
