--- a/pages/historia.html
+++ b/pages/historia.html
@@ -33,18 +33,18 @@
           <div class="collapse navbar-collapse" id="nav">
             <ul class="navbar-nav ms-lg-auto me-auto me-lg-0 mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="../index.html"
+                <a class="nav-link " aria-current="page" href="../index.html"
                   >Inicio</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contacto.html">Contactos</a>
+                <a class="nav-link" href="./contacto.html">Contactos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="historia.html">Historia</a>
+                <a class="nav-link active" href="./historia.html">Historia</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="productos.html">Productos</a>
+                <a class="nav-link " href="./productos.html">Productos</a>
               </li>
             </ul>
           </div>
@@ -63,8 +63,30 @@
         </aside>
       </section>
     </main>
-    <footer class="bg-dark py-4 text-light text-center">
-      <p>&copy; Todos los derechos reservados</p>
+    <footer class="bg-dark py-4 ">
+      <section class="container">
+        <article class="row text-secondary">
+          <aside class="col-12 col-md-4">
+            <img
+              src="../img/cocu_logo-450.png"
+              alt="logo panaderia cocu"
+              width="90px"
+            />
+          </aside>
+          <aside class="col-12 col-md-4">
+            <h5>Horarios de atencion</h5>
+            <p>Lunes a viernes <br>Sabado y domingo</p>
+          </aside>
+          <aside class="col-12 col-md-4">
+            <h5>Seguinos en nuestras redes</h5>
+            <div class="text-center">
+              <a href="#" class="text-secondary"><i class="bi bi-whatsapp fs-3"></i></a>
+              <a href="#" class="text-secondary"><i class="bi bi-facebook fs-3"></i></a>
+              <a href="#" class="text-secondary"> <i class="bi bi-instagram fs-3"></i></a>
+            </div>
+          </aside>
+        </article>
+      </section>
     </footer>
     <script src="js/bootstrap.min.js"></script>
   </body>
