--- a/pages/productos.html
+++ b/pages/productos.html
@@ -34,20 +34,18 @@
           <div class="collapse navbar-collapse" id="nav">
             <ul class="navbar-nav ms-lg-auto me-auto me-lg-0 mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="../index.html"
+                <a class="nav-link " aria-current="page" href="../index.html"
                   >Inicio</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/pages/contacto.html">Contactos</a>
+                <a class="nav-link" href="./contacto.html">Contactos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/pages/historia.html">Historia</a>
+                <a class="nav-link" href="./historia.html">Historia</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="/pages/productos.html"
-                  >Productos</a
-                >
+                <a class="nav-link active" href="./productos.html">Productos</a>
               </li>
             </ul>
           </div>
@@ -56,13 +54,13 @@
     </header>
     <main class="container my-5">
       <section>
-        <h1 class="display-1 text-center">Lista de productos</h1>
+        <h1 class="display-1 text-center text-primary">Lista de productos</h1>
         <hr />
         <article class="row">
           <aside class="col-12 col-md-4 col-lg-3 my-3">
             <div class="card">
               <img
-                src="/img/productos/Croissant_00018_portfolio1.jpg"
+                src="../img/productos/Croissant_00018_portfolio1.jpg"
                 class="card-img-top"
                 alt="Medialuna"
               />
@@ -81,7 +79,7 @@
           <aside class="col-12 col-md-4 col-lg-3 my-3">
             <div class="card">
               <img
-                src="/img/productos/Torta-de-chocolate_00098_portfolio.jpg"
+                src="../img/productos/Torta-de-chocolate_00098_portfolio.jpg"
                 class="card-img-top"
                 alt="Tarta de chocolate"
               />
@@ -91,7 +89,7 @@
                   Some quick example text to build on the card title and make up
                   the bulk of the card's content.
                 </p>
-                <a href="detalleProducto.html" class="btn btn-primary">
+                <a href="./detalleProducto.html" class="btn btn-primary">
                   Ver más...
                 </a>
               </div>
