modificar el color del titutlo de la pagina principal proba nuestros sabores

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
         </article>
         <article>
           <div class="my-4 text-center">
-            <p class="display-3">Proba nuestros sabores</p>
+            <p class="display-3 text-danger">Proba nuestros sabores</p>
             <hr>
           </div>
           <div class="row">
